# tklogger

./: .gitignore  CMakeLists.txt  README.md
include/: logger.h
src/: logger.cpp
test/: CMakeLists.txt  logger_test.cpp
